# coshop

./: .gitignore  404.html  README.md  coshop_data_explorer.ipynb  evaluate_agent.py  index.html  launch_vector_search_server.sh  mkdocs.yml  namer.py  objects.inv  pyproject.toml  sitemap.xml  user_simulator_playground.ipynb
.github/workflows/: pages.yml
api/data/datasets/: index.html
api/data/goodreads/: index.html
api/data/hm/: index.html
api/data/movielens/: index.html
api/data/representation/: index.html
api/data/subset_catalog/: index.html
api/data/utility/: index.html
api/evaluation/budget/: index.html
api/evaluation/metrics/: index.html
api/tools/catalog_retrieval/: index.html
api/tools/history_search/: index.html
api/tools/reflect/: index.html
api/tools/retrieval/: index.html
api/tools/vector_search/: index.html
api/user_simulator/expert_user/: index.html
api/user_simulator/helpers/: index.html
api/user_simulator/user/: index.html
api/utils/agent/: index.html
api/utils/custom_types/: index.html
api/utils/langchain_agent/: index.html
api/utils/misc/: index.html
api/utils/model/: index.html
coshop/: __init__.py  requirements.txt
coshop/data/: __init__.py  dataset.py  representation.py  subset_catalog.py  utility.py
coshop/data/goodreads/: data.py  v1_config.yml  v2_config.yml
coshop/data/hm/: data.py  v1_config.yml  v2_config.yml
coshop/data/movielens/: data.py  v1_config.yml  v2_config.yml
coshop/evaluation/: budget.py  metrics.py
coshop/tools/: catalog_retrieval.py  history_df.py  history_search.py  reflect.py  vector_search_api_client.py  vector_search_server.py
coshop/tools/retrieval/: bm25.py  retrieval.py  vector_search.py
coshop/user_simulator/: __init__.py  copref_user.py  expert_user.py  full_spec_user.py  simulator_prompts.json  user.py
coshop/user_simulator/helpers/: feature_tracker.py  feature_utils.py  final_rank_items.py  item_comparer.py  message_parser.py  question_answerer.py  (+1 more)
coshop/utils/: agent.py  caches.py  custom_types.py  langchain_agent.py  lotus.py  misc.py  model.py  tools.py
docs/: index.md
docs/stylesheets/: extra.css
example_agents/: __init__.py  agent_playground.ipynb  baseline_policies.py  conversational.py  conversational_prompts.json  langchain_prediction_utils.py  policy.py
example_experiment_launchers/: README.md  launch_fully_specified.sh  launch_history_agent.sh  launch_override_item_descs.sh  launch_search_features_only.sh  launch_standard_rag_agent.sh  launch_structured_agent.sh
search/: search_index.json
website/: index.html
website/css/: styles.css
website/data/: samples.json
website/js/: dataset-explorer.js  main.js
website/tools/: export_website_data.py
(+22 files in other folders)
