[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coshop"
version = "0.1.0"
description = "An interactive benchmark for agentic recommender systems that must help non-expert users construct their preferences."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Irena Saracay" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gdown",
    "numpy",
    "datasets",
    "lotus-ai>=1.1",
    "langchain-anthropic==0.3",
    "langchain-openai>=0.3",
    "langchain-huggingface>=0.3",
    "langchain-core==0.3.79",
    "langchain",
    "langgraph==0.4.8",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.2.2",
    "transformers",
    "sentence-transformers",
    "openai",
    "anthropic",
    "streamlit>=1.49",
    "inflect",
    "pandas",
    "Pillow",
    "json-repair>=0.40",
    "trueskill",
    "rank-bm25",
    "requests",
    "gunicorn",
    "hnswlib",
    "flask",
    "pyyaml",
]

[project.urls]
Homepage = "https://i-gao.github.io/coshop/"
Repository = "https://github.com/i-gao/coshop"
Documentation = "https://i-gao.github.io/coshop/api/"

[project.scripts]
coshop-vector-search-server = "coshop.tools.vector_search_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coshop*"]

[tool.setuptools.package-data]
"coshop" = [
    "data/*/*_config.yml",
    "user_simulator/simulator_prompts.json",
]
